--- a/Variety.html
+++ b/Variety.html
@@ -23,37 +23,68 @@
           <font face=helvetica size="+1'>"
           <p class="run"> To find out the perfect pairings to the bagels listed on this page - Click <a href="">here!</a></p>
           <ul class="hello">
-            <li><img src="C:\Users\Projects\images\9grain.png" /><strong>9-Grain</strong> - Trick yourself into thinking bagels are a healthy alternative to a balanced breakfast.</li>
-            <li><img src="C:\Users\Projects\images\asiago.png" /> <strong>Asiago</strong> - A sharp, sweet cheesey flavor to get your day going. </li>
-            <li><img src="C:\Users\Projects\images\blueberry.png" /><strong>Blueberry</strong> - Add fruit to your diet.</li>
-            <li><img src="C:\Users\Projects\images\caraway.png" /><strong>Caraway</strong>
-            <li><img src="C:\Users\Projects\images\cheesebialy.png" /><strong>Cheese Bialy</strong>
-            <li><img src="C:\Users\Projects\images\chevy.png" /><strong>Chevy</strong>
-            <li><img src="C:\Users\Projects\images\chocolate.png" /><strong>Chocolate Chip</strong> - Need an early morning dessert? This is the bagel for you!</li>
-            <li><img src="C:\Users\Projects\images\Cinnamon Raisin.png" /><strong>Cinnamon Raisin</strong> - A staple breakfast flavor. Combine cinnamon and raisin for a great start to your momrning.</li>
-            <li><img src="C:\Users\Projects\images\cinnamonchip.png" /><strong>Cinnamon Chip</strong>
-            <li><img src="C:\Users\Projects\images\Cran.png" /><strong>Cranberry</strong> - </li>
-            <li><img src="C:\Users\Projects\images\cranberry-orange.png" /><strong>Cranberry Orange</strong>
-            <li><img src="C:\Users\Projects\images\egg.png" /><strong>Egg</strong>
-            <li><img src="C:\Users\Projects\images\Everything.png" /><strong>Everything</strong> -  Can't make up your mind? This is the bagel for you. </li>
-            <li><img src="C:\Users\Projects\images\frenchtoast.png" /><strong>French Toast</strong>
-            <li><img src="C:\Users\Projects\images\garlic.png" /><strong>Garlic</strong> - A great way to keep the vampires away!</li>
-            <li><img src="C:\Users\Projects\images\Honeywheat.png" /><strong>Honey Whole Wheat</strong></li>
-            <li><img src="C:\Users\Projects\images\jalapeno.png" /><strong>Jalapeno</strong>
-            <li><img src="C:\Users\Projects\images\jalpepjack.png" /><strong>Jalapeno Pepper Jack</strong>
-            <li><img src="C:\Users\Projects\images\onion.png" /><strong>Onion</strong> - Dislike your co-workers? Prepare your breath by chowing down on one of these</li>
-            <li><img src="C:\Users\Projects\images\onionbialy.png" /><strong>Onion Bialy</strong>
-            <li><img src="C:\Users\Projects\images\pesto.png" /><strong>Pesto</strong>
-            <li><img src="C:\Users\Projects\images\Pizza.png" /><strong>Pizza</strong>
-            <li><img src="C:\Users\Projects\images\Plain.png" /><strong>Plain</strong> - The Charlie Brown of bagels - entierly plain, entirely boring.</li>
-            <li><img src="C:\Users\Projects\images\poppyseed.png" /><strong>Poppy Seed - Do not eat this bagel if you have an upcoming drug exam! </li>
-            <li><img src="C:\Users\Projects\images\pretzel.png" /><strong>Pretzel</strong> - Think about just eating a pretzel.</li>
-            <li><img src="C:\Users\Projects\images\rosemary.png" /><strong>Rosemary</strong>
-            <li><img src="C:\Users\Projects\images\salt.png" /><strong>Salt</strong> - Bread plus salt. All that's  needed is the schmear.</li>
-            <li><img src="C:\Users\Projects\images\sesame.png" /><strong>Sesame Seed</strong> - Makes all the local birds jealous</li>
-            <li><img src="C:\Users\Projects\images\sourdough.png" /><strong>Sourdough</strong>
-            <li><img src="C:\Users\Projects\images\sundried.png" /><strong>Sundried Tomato</strong>
-            <li><img src="C:\Users\Projects\images\wweverything.png" /><strong>Whole Wheat Everything</strong>
+            <li><a href="#"><img class="actual" src="*/images/9grain.png" width="32" height="32" alt="picSmall" /><img class="another" src="*\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>9-Grain</strong> - Trick yourself into thinking bagels are a healthy alternative to a balanced breakfast.</li>
+            <li><a href="#"><img class="actual"  src="\images\asiago.png"  width="32" height="32" alt="picSmall" /> <img class="another" src="C:\Users\Projects\images\bagel-asiago.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Asiago</strong> - A sharp, sweet cheesey flavor to get your day going. </li>
+            <li><a href="#"><img class="actual"  src="\images\blueberry.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Blueberry</strong> - Add fruit to your diet.</li>
+            <li><a href="#"><img class="actual"  src="C:\Users\Projects\images\caraway.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Caraway</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\cheesebialy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Cheese Bialy</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\chevy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Chevy</strong>
+            <li><a href="#"><a href="#"><a href="#"><img class="actual"  src="C:\Users\Projects\images\chocolate.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Chocolate Chip</strong> - Need an early morning dessert? This is the bagel for you!</li>
+            <li><a href="#"><a href="#"><img class="actual"  src="C:\Users\Projects\images\Cinnamon Raisin.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Cinnamon Raisin</strong> - A staple breakfast flavor. Combine cinnamon and raisin for a great start to your momrning.</li>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\cinnamonchip.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Cinnamon Chip</strong>
+            <li><a href="#"><a href="#"><img class="actual" src="C:\Users\Projects\images\Cran.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Cranberry</strong> - </li>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\cranberry-orange.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Cranberry Orange</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\egg.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Egg</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\Everything.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Everything</strong> -  Can't make up your mind? This is the bagel for you. </li>
+            <li><a href="#"><a href="#"><img class="actual" src="C:\Users\Projects\images\frenchtoast.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>French Toast</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\garlic.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Garlic</strong> - A great way to keep the vampires away!</li>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\Honeywheat.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Honey Whole Wheat</strong></li>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\jalapeno.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Jalapeno</strong>
+            <li><a href="#"><a href="#"><img class="actual" src="C:\Users\Projects\images\jalpepjack.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Jalapeno Pepper Jack</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\onion.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Onion</strong> - Dislike your co-workers? Prepare your breath by chowing down on one of these</li>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\onionbialy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Onion Bialy</strong>
+            <li><a href="#"><a href="#"><img class="actual" src="C:\Users\Projects\images\pesto.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Pesto</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\Pizza.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Pizza</strong>
+            <li><a href="#"><a href="#"><a href="#"><img class="actual" src="C:\Users\Projects\images\Plain.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Plain</strong> - The Charlie Brown of bagels - entierly plain, entirely boring.</li>
+            <li><a href="#"><a href="#"><img class="actual" src="C:\Users\Projects\images\poppyseed.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Poppy Seed - Do not eat this bagel if you have an upcoming drug exam! </li>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\pretzel.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Pretzel</strong> - Think about just eating a pretzel.</li>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\rosemary.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Rosemary</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\salt.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Salt</strong> - Bread plus salt. All that's  needed is the schmear.</li>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\sesame.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Sesame Seed</strong> - Makes all the local birds jealous</li>
+            <li><a href="#"><a href="#"><img class="actual" src="C:\Users\Projects\images\sourdough.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Sourdough</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\sundried.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Sundried Tomato</strong>
+            <li><a href="#"><img class="actual" src="C:\Users\Projects\images\wweverything.png"  width="32" height="32" alt="picSmall" /><img class="another" src="C:\Users\Projects\images\bagel-multi-grain.png" width="400" height="373"
+  alt="picLarge" /></a><strong>Whole Wheat Everything</strong>
           </ul>
         </font>
           <br />
