testing online linking

--- a/Variety.html
+++ b/Variety.html
@@ -23,7 +23,7 @@
           <font face=helvetica size="+1'>"
           <p class="run"> To find out the perfect pairings to the bagels listed on this page - Click <a href="">here!</a></p>
           <ul class="hello">
-            <li><a href="#"><img class="actual" src="*/images/9grain.png" width="32" height="32" alt="picSmall" /><img class="another" src="*\images\bagel-multi-grain.png" width="400" height="373"
+            <li><a href="#"><img class="actual" src="/images/9grain.png" width="32" height="32" alt="picSmall" /><img class="another" src="*\images\bagel-multi-grain.png" width="400" height="373"
   alt="picLarge" /></a><strong>9-Grain</strong> - Trick yourself into thinking bagels are a healthy alternative to a balanced breakfast.</li>
             <li><a href="#"><img class="actual"  src="\images\asiago.png"  width="32" height="32" alt="picSmall" /> <img class="another" src="C:\Users\Projects\images\bagel-asiago.png" width="400" height="373"
   alt="picLarge" /></a><strong>Asiago</strong> - A sharp, sweet cheesey flavor to get your day going. </li>
