testing online linking

--- a/Variety.html
+++ b/Variety.html
@@ -73,7 +73,7 @@
   alt="picLarge" /></a><strong>Rosemary</strong>
             <li><a href="#"><img class="actual" src="\images\salt.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-salt.png" width="400" height="373"
   alt="picLarge" /></a><strong>Salt</strong> - Bread plus salt. All that's  needed is the schmear.</li>
-            <li><a href="#"><img class="actual" src="\images\Sesame.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sesame.png" width="400" height="373"
+            <li><a href="#"><img class="actual" src="\images\sesame.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sesame.png" width="400" height="373"
   alt="picLarge" /></a><strong>Sesame Seed</strong> - Makes all the local birds jealous</li>
             <li><a href="#"><a href="#"><img class="actual" src="\images\sourdough.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sourdough.png" width="400" height="373"
   alt="picLarge" /></a><strong>Sourdough</strong>
