testing item list position

--- a/Variety.html
+++ b/Variety.html
@@ -53,34 +53,36 @@
   alt="picLarge" /></a><strong>Garlic</strong> - A great way to keep the vampires away!</li>
             <li><a href="#"><img class="actual" src="\images\jalapeno.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-jalapeno.png" width="400" height="373"
   alt="picLarge" /></a><strong>Jalapeno</strong>
+          </ul>
+          <ul class="goodbye">
             <li><a href="#"><a href="#"><img class="actual" src="\images\jalpepjack.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-jalapeno-pepper-jack.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Jalapeno Pepper Jack</strong>
+            alt="picLarge" /></a><strong>Jalapeno Pepper Jack</strong>
             <li><a href="#"><img class="actual" src="\images\onion.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Onion</strong> - Dislike your co-workers? Prepare your breath by chowing down on one of these</li>
+            alt="picLarge" /></a><strong>Onion</strong> - Dislike your co-workers? Prepare your breath by chowing down on one of these</li>
             <li><a href="#"><img class="actual" src="\images\onionbialy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion-bialy.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Onion Bialy</strong>
+            alt="picLarge" /></a><strong>Onion Bialy</strong>
             <li><a href="#"><a href="#"><img class="actual" src="\images\pesto.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pesto.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Pesto</strong>
+            alt="picLarge" /></a><strong>Pesto</strong>
             <li><a href="#"><img class="actual" src="\images\Pizza.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pizza.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Pizza</strong>
+            alt="picLarge" /></a><strong>Pizza</strong>
             <li><a href="#"><a href="#"><a href="#"><img class="actual" src="\images\Plain.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-plain.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Plain</strong> - The Charlie Brown of bagels - entierly plain, entirely boring.</li>
+            alt="picLarge" /></a><strong>Plain</strong> - The Charlie Brown of bagels - entierly plain, entirely boring.</li>
             <li><a href="#"><a href="#"><img class="actual" src="\images\poppyseed.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-poppyseed.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Poppy Seed - Do not eat this bagel if you have an upcoming drug exam! </li>
+            alt="picLarge" /></a><strong>Poppy Seed - Do not eat this bagel if you have an upcoming drug exam! </li>
             <li><a href="#"><img class="actual" src="\images\pretzel.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pretzel.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Pretzel</strong> - Think about just eating a pretzel.</li>
+            alt="picLarge" /></a><strong>Pretzel</strong> - Think about just eating a pretzel.</li>
             <li><a href="#"><img class="actual" src="\images\rosemary.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-rosemary.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Rosemary</strong>
+            alt="picLarge" /></a><strong>Rosemary</strong>
             <li><a href="#"><img class="actual" src="\images\salt.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-salt.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Salt</strong> - Bread plus salt. All that's  needed is the schmear.</li>
-            <li><a href="#"><img class="actual" src="\images\sesame.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sesame.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Sesame Seed</strong> - Makes all the local birds jealous</li>
+            alt="picLarge" /></a><strong>Salt</strong> - Bread plus salt. All that's  needed is the schmear.</li>
+            <li><a href="#"><img class="actual" src="\images\Sesame.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sesame.png" width="400" height="373"
+            alt="picLarge" /></a><strong>Sesame Seed</strong> - Makes all the local birds jealous</li>
             <li><a href="#"><a href="#"><img class="actual" src="\images\sourdough.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sourdough.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Sourdough</strong>
+            alt="picLarge" /></a><strong>Sourdough</strong>
             <li><a href="#"><img class="actual" src="\images\sundried.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sun-dried-tomato.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Sundried Tomato</strong>
+            alt="picLarge" /></a><strong>Sundried Tomato</strong>
             <li><a href="#"><img class="actual" src="\images\wweverything.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-whole-wheat-everything.png" width="400" height="373"
-  alt="picLarge" /></a><strong>Whole Wheat Everything</strong>
+            alt="picLarge" /></a><strong>Whole Wheat Everything</strong>
           </ul>
         </font>
           <br />
