testing item list position

--- a/Variety.html
+++ b/Variety.html
@@ -35,9 +35,9 @@
   alt="picLarge" /></a><strong>Cheese Bialy</strong>
             <li><a href="#"><img class="actual" src="\images\chevy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-chevy.png" width="400" height="373"
   alt="picLarge" /></a><strong>Chevy</strong>
-            <li><a href="#"><a href="#"><a href="#"><img class="actual"  src="\images\chocolate.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-chocolate-chip.png" width="400" height="373"
+            <li><a href="#"><img class="actual"  src="\images\chocolate.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-chocolate-chip.png" width="400" height="373"
   alt="picLarge" /></a><strong>Chocolate Chip</strong> - Need an early morning dessert? This is the bagel for you!</li>
-            <li><a href="#"><a href="#"><img class="actual"  src="\images\Cinnamon Raisin.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-cinnamon-raisin.png" width="400" height="373"
+            <li><a href="#"><img class="actual"  src="\images\Cinnamon Raisin.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-cinnamon-raisin.png" width="400" height="373"
   alt="picLarge" /></a><strong>Cinnamon Raisin</strong> - A staple breakfast flavor. Combine cinnamon and raisin for a great start to your momrning.</li>
             <li><a href="#"><img class="actual" src="\images\cinnamonchip.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-cinnamon-chip.png" width="400" height="373"
   alt="picLarge" /></a><strong>Cinnamon Chip</strong>
@@ -47,7 +47,7 @@
   alt="picLarge" /></a><strong>Egg</strong>
             <li><a href="#"><img class="actual" src="\images\Everything.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-everything.png" width="400" height="373"
   alt="picLarge" /></a><strong>Everything</strong> -  Can't make up your mind? This is the bagel for you. </li>
-            <li><a href="#"><a href="#"><img class="actual" src="\images\frenchtoast.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-french-toast.png" width="400" height="373"
+            <li><a href="#"><img class="actual" src="\images\frenchtoast.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-french-toast.png" width="400" height="373"
   alt="picLarge" /></a><strong>French Toast</strong>
             <li><a href="#"><img class="actual" src="\images\garlic.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-garlic.png" width="400" height="373"
   alt="picLarge" /></a><strong>Garlic</strong> - A great way to keep the vampires away!</li>
@@ -55,19 +55,19 @@
   alt="picLarge" /></a><strong>Jalapeno</strong>
           </ul>
           <ul class="goodbye">
-            <li><a href="#"><a href="#"><img class="actual" src="\images\jalpepjack.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-jalapeno-pepper-jack.png" width="400" height="373"
+            <li><a href="#"><img class="actual" src="\images\jalpepjack.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-jalapeno-pepper-jack.png" width="400" height="373"
             alt="picLarge" /></a><strong>Jalapeno Pepper Jack</strong>
             <li><a href="#"><img class="actual" src="\images\onion.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion.png" width="400" height="373"
             alt="picLarge" /></a><strong>Onion</strong> - Dislike your co-workers? Prepare your breath by chowing down on one of these</li>
             <li><a href="#"><img class="actual" src="\images\onionbialy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion-bialy.png" width="400" height="373"
             alt="picLarge" /></a><strong>Onion Bialy</strong>
-            <li><a href="#"><a href="#"><img class="actual" src="\images\pesto.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pesto.png" width="400" height="373"
+            <li><a href="#"><img class="actual" src="\images\pesto.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pesto.png" width="400" height="373"
             alt="picLarge" /></a><strong>Pesto</strong>
             <li><a href="#"><img class="actual" src="\images\Pizza.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pizza.png" width="400" height="373"
             alt="picLarge" /></a><strong>Pizza</strong>
-            <li><a href="#"><a href="#"><a href="#"><img class="actual" src="\images\Plain.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-plain.png" width="400" height="373"
+            <li><a href="#"><img class="actual" src="\images\Plain.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-plain.png" width="400" height="373"
             alt="picLarge" /></a><strong>Plain</strong> - The Charlie Brown of bagels - entierly plain, entirely boring.</li>
-            <li><a href="#"><a href="#"><img class="actual" src="\images\poppyseed.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-poppyseed.png" width="400" height="373"
+            <li><a href="#"><img class="actual" src="\images\poppyseed.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-poppyseed.png" width="400" height="373"
             alt="picLarge" /></a><strong>Poppy Seed - Do not eat this bagel if you have an upcoming drug exam! </li>
             <li><a href="#"><img class="actual" src="\images\pretzel.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pretzel.png" width="400" height="373"
             alt="picLarge" /></a><strong>Pretzel</strong> - Think about just eating a pretzel.</li>
@@ -77,7 +77,7 @@
             alt="picLarge" /></a><strong>Salt</strong> - Bread plus salt. All that's  needed is the schmear.</li>
             <li><a href="#"><img class="actual" src="\images\Sesame.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sesame.png" width="400" height="373"
             alt="picLarge" /></a><strong>Sesame Seed</strong> - Makes all the local birds jealous</li>
-            <li><a href="#"><a href="#"><img class="actual" src="\images\sourdough.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sourdough.png" width="400" height="373"
+            <li><a href="#"><img class="actual" src="\images\sourdough.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sourdough.png" width="400" height="373"
             alt="picLarge" /></a><strong>Sourdough</strong>
             <li><a href="#"><img class="actual" src="\images\sundried.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sun-dried-tomato.png" width="400" height="373"
             alt="picLarge" /></a><strong>Sundried Tomato</strong>
