--- a/Variety.html
+++ b/Variety.html
@@ -21,7 +21,7 @@
         <article>
           <header><h2><strong> Baagel Varieties </strong></h2></header>
           <font face=helvetica size="+1'>"
-          <p class="run"> To find out the perfect pairings to the bagels listed on this page - Click <a href="">here!</a></p>
+          <p class="run"> To find out the perfect pairings to the bagels listed on this page - Click <a href="Bagel_pairing.html">here!</a></p>
           <div class="night">
             <ul class="hello">
               <li><a href="#"><img class="actual" src="\images/9grain.png" width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-multi-grain.png" width="400" height="373"
