testing item list position

--- a/Variety.html
+++ b/Variety.html
@@ -9,7 +9,7 @@
   <!-- <body style="background-color: #493627;"> -->
     <main>
       <h1> Baagel Bizzness </h1>
-      <nav
+      <nav>
         <ul>
           <li> <a href="index.html" >Home</a></li>
           <li> <a href="locations.html">Bagel Locations</a></li>
