--- a/Variety.html
+++ b/Variety.html
@@ -59,7 +59,7 @@
           <div class="night">
             <ul>
               <li><a href="#"><img class="actual" src="\images\jalpepjack.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-jalapeno-pepper-jack.png" width="400" height="373"
-              alt="picLarge" /></a><strong></strong>
+              alt="picLarge" /></a><strong>Jalapeno Pepper Jack</strong>
               <li><a href="#"><img class="actual" src="\images\onion.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion.png" width="400" height="373"
               alt="picLarge" /></a><strong>Onion</strong></li>
               <li><a href="#"><img class="actual" src="\images\onionbialy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion-bialy.png" width="400" height="373"
