going to get this

--- a/Variety.html
+++ b/Variety.html
@@ -57,7 +57,7 @@
             </ul>
           </div>
           <div class="night">
-            <ul class="123">
+            <ul class="alicia">
               <li><a href="#"><img class="actual" src="\images\jalpepjack.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-jalapeno-pepper-jack.png" width="400" height="373"
               alt="picLarge" /></a><strong>Jalapeno Pepper Jack</strong></li>
               <li><a href="#"><img class="actual" src="\images\onion.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion.png" width="400" height="373"
