--- a/Bagel_pairing.html
+++ b/Bagel_pairing.html
@@ -38,21 +38,21 @@
   <main>
 
 <img class= "images" src="images/bagel_plain.jpg">
-<img class= "plus" src="images/plus_sign.png">
+<img class= "plus" src="\images\plus_sign.png">
 <img class= "images"  src="images/wine_small.jpg">
 <p>"The simplest of all pairings, wet your whistle and enjoy some fine dining with this timeless pair."</P>
 <img class= "images"  src="images/bagel_rye.jpg">
-<img class= "plus" src="images/plus_sign.png">
+<img class= "plus" src="\images\plus_sign.png">
 <img class= "images"  src="images/whiskey_small.jpg">
 <p>"Pairing these two items will all but assure you a massive windfall of cash."</P>
 
 <img class= "images"  src="images/bagel_wheat.jpg">
-<img class= "plus" src="images/plus_sign.png">
+<img class= "plus" src="\images\plus_sign.png">
 <img class= "images"  src="images/pbr.jpg">
 <p>"James Bond is known to chow down on this bagel and drink his favorite frosty beverage after slaying a foe."</P>
 
 <img class= "images"  src="images/bagel_jalepeno.jpg">
-<img class= "plus" src="images/plus_sign.png">
+<img class= "plus" src="\images\plus_sign.png">
 <img class= "images"     src="images/martini_small.png">
 <p>"Take a walk on the wild side with these two classy items."</P>
 
