--- a/Variety.html
+++ b/Variety.html
@@ -31,61 +31,60 @@
               <li><a href="#"><img class="actual"  src="\images\blueberry.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-blueberry.png" width="400" height="373"
     alt="picLarge" /></a><strong>Blueberry</strong></li>
               <li><a href="#"><img class="actual"  src="\images\caraway.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-caraway.png" width="400" height="373"
-    alt="picLarge" /></a><strong>Caraway</strong>
+    alt="picLarge" /></a><strong>Caraway</strong> </li>
               <li><a href="#"><img class="actual" src="\images\cheesebialy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-cheese-bialy.png" width="400" height="373"
-    alt="picLarge" /></a><strong>Cheese Bialy</strong>
+    alt="picLarge" /></a><strong>Cheese Bialy</strong> </li>
               <li><a href="#"><img class="actual" src="\images\chevy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-chevy.png" width="400" height="373"
-    alt="picLarge" /></a><strong>Chevy</strong>
+    alt="picLarge" /></a><strong>Chevy</strong> </li>
               <li><a href="#"><img class="actual"  src="\images\chocolate.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-chocolate-chip.png" width="400" height="373"
     alt="picLarge" /></a><strong>Chocolate Chip</strong></li>
               <li><a href="#"><img class="actual"  src="\images\Cinnamon Raisin.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-cinnamon-raisin.png" width="400" height="373"
     alt="picLarge" /></a><strong>Cinnamon Raisin</strong></li>
               <li><a href="#"><img class="actual" src="\images\cinnamonchip.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-cinnamon-chip.png" width="400" height="373"
-    alt="picLarge" /></a><strong>Cinnamon Chip</strong>
+    alt="picLarge" /></a><strong>Cinnamon Chip</strong> </li>
               <li><a href="#"><img class="actual" src="\images\cranberry-orange.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-cranberry-orange.png" width="400" height="373"
-    alt="picLarge" /></a><strong>Cranberry Orange</strong>
+    alt="picLarge" /></a><strong>Cranberry Orange</strong> </li>
               <li><a href="#"><img class="actual" src="\images\egg.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-egg.png" width="400" height="373"
-    alt="picLarge" /></a><strong>Egg</strong>
+    alt="picLarge" /></a><strong>Egg</strong> </li>
               <li><a href="#"><img class="actual" src="\images\Everything.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-everything.png" width="400" height="373"
     alt="picLarge" /></a><strong>Everything</strong> </li>
               <li><a href="#"><img class="actual" src="\images\frenchtoast.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-french-toast.png" width="400" height="373"
-    alt="picLarge" /></a><strong>French Toast</strong>
+    alt="picLarge" /></a><strong>French Toast</strong> </li>
               <li><a href="#"><img class="actual" src="\images\garlic.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-garlic.png" width="400" height="373"
     alt="picLarge" /></a><strong>Garlic</strong></li>
               <li><a href="#"><img class="actual" src="\images\jalapeno.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-jalapeno.png" width="400" height="373"
-    alt="picLarge" /></a><strong>Jalapeno</strong>
+    alt="picLarge" /></a><strong>Jalapeno</strong></li>
             </ul>
           </div>
           <div class="night">
             <ul class="alicia">
               <li><a href="#"><img class="actual" src="\images\jalpepjack.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-jalapeno-pepper-jack.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Jalapeno Pepper Jack</strong></li>
+    alt="picLarge" /></a><strong>Jalapeno Pepper Jack</strong></li>
               <li><a href="#"><img class="actual" src="\images\onion.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Onion</strong></li>
+    alt="picLarge" /></a><strong>Onion</strong></li>
               <li><a href="#"><img class="actual" src="\images\onionbialy.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-onion-bialy.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Onion Bialy</strong>
+    alt="picLarge" /></a><strong>Onion Bialy</strong></li>
               <li><a href="#"><img class="actual" src="\images\pesto.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pesto.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Pesto</strong>
+    alt="picLarge" /></a><strong>Pesto</strong></li>
               <li><a href="#"><img class="actual" src="\images\Pizza.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pizza.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Pizza</strong>
+    alt="picLarge" /></a><strong>Pizza</strong></li>
               <li><a href="#"><img class="actual" src="\images\Plain.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-plain.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Plain</strong></li>
-              <li><a href="#"><img class="actual" src="\images\poppyseed.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-poppyseed.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Poppy Seed</strong> </li>
+    alt="picLarge" /></a><strong>Plain</strong></li>
+              <li><a href="#"><img class="actual" src="\images\poppyseed.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-poppyseed.png" width="400" height="373" alt="picLarge" /></a><strong>Poppy Seed</strong> </li>
               <li><a href="#"><img class="actual" src="\images\pretzel.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-pretzel.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Pretzel</strong></li>
+    alt="picLarge" /></a><strong>Pretzel</strong></li>
               <li><a href="#"><img class="actual" src="\images\rosemary.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-rosemary.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Rosemary</strong></li>
+    alt="picLarge" /></a><strong>Rosemary</strong></li>
               <li><a href="#"><img class="actual" src="\images\salt.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-salt.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Salt</strong></li>
+    alt="picLarge" /></a><strong>Salt</strong></li>
               <li><a href="#"><img class="actual" src="\images\Sesame.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sesame.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Sesame Seed</strong></li>
+    alt="picLarge" /></a><strong>Sesame Seed</strong></li>
               <li><a href="#"><img class="actual" src="\images\sourdough.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sourdough.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Sourdough</strong></li>
+    alt="picLarge" /></a><strong>Sourdough</strong></li>
               <li><a href="#"><img class="actual" src="\images\sundried.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-sun-dried-tomato.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Sundried Tomato</strong></li>
+    alt="picLarge" /></a><strong>Sundried Tomato</strong></li>
               <li><a href="#"><img class="actual" src="\images\wweverything.png"  width="32" height="32" alt="picSmall" /><img class="another" src="\images\bagel-whole-wheat-everything.png" width="400" height="373"
-              alt="picLarge" /></a><strong>Whole Wheat Everything</strong></li>
+    alt="picLarge" /></a><strong>Whole Wheat Everything</strong></li>
             </ul>
         </font>
           <br />
