--- a/Bagel_pairing.html
+++ b/Bagel_pairing.html
@@ -25,13 +25,13 @@
     <nav>
       <ul>
         <li>
-          <a href="index.html">home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="locations.html">bagel locations</a>
+          <a href="locations.html">Bagel Locations</a>
         </li>
         <li>
-          <a href="Variety.html">bagel variety</a>
+          <a href="Variety.html">Bagel Varietals</a>
         </li>
       </ul>
     </nav>
@@ -40,21 +40,21 @@
 <img class= "images" src="images/bagel_plain.jpg">
 <img class= "plus" src="\images\Plus_Sign.png">
 <img class= "images"  src="images/wine_small.jpg">
-<p>"The simplest of all pairings, wet your whistle and enjoy some fine dining with this timeless pair."</P>
+<p font-size: 20px;>"The simplest of all pairings, wet your whistle and enjoy some fine dining with this timeless pair."</P>
 <img class= "images"  src="images/bagel_rye.jpg">
 <img class= "plus" src="\images\Plus_Sign.png">
 <img class= "images"  src="images/whiskey_small.jpg">
-<p>"Pairing these two items will all but assure you a massive windfall of cash."</P>
+<p font-size: 20px;>"Pairing these two items will all but assure you a massive windfall of cash."</P>
 
 <img class= "images"  src="images/bagel_wheat.jpg">
 <img class= "plus" src="\images\Plus_Sign.png">
 <img class= "images"  src="images/pbr.jpg">
-<p>"James Bond is known to chow down on this bagel and drink his favorite frosty beverage after slaying a foe."</P>
+<p font-size: 20px;>"James Bond is known to chow down on this bagel and drink his favorite frosty beverage after slaying a foe."</P>
 
 <img class= "images"  src="images/bagel_jalepeno.jpg">
 <img class= "plus" src="\images\Plus_Sign.png">
 <img class= "images"     src="images/martini_small.png">
-<p>"Take a walk on the wild side with these two classy items."</P>
+<p font-size: 20px;>"Take a walk on the wild side with these two classy items."</P>
 
   </main>
 
