--- a/Bagel_pairing.html
+++ b/Bagel_pairing.html
@@ -6,11 +6,7 @@
   <link rel="stylesheet" href="css/pairing.css">
 
   <title>
-
-<center>
- bagel pairing
-</center>
-
+ Bagel Pairing
   </title>
 </head>
 
